<resources>
    <string name="app_name">MeetGSO</string>
    <string name="exit">Exit</string>
    <string name="home">Home</string>
    <string name="_home">TODO</string>
    <string name="_archive">TODO</string>
    <string name="_settings">TODO</string>
    <string name="_exit">TODO</string>
    <string name="sample">Lorem Ipsum</string>
    <string name="todo">TODO</string>
    <string name="general_service_office">GENERAL SERVICE OFFICE</string>
    <string name="archive">Archive</string>
    <string name="back">BACK</string>
    <string name="settings">Settings</string>
    <string name="text_size">Text Size:</string>
    <string name="font_style">Font Style:</string>
    <string name="arial">Arial</string>
    <string name="helvetica">Helvetica</string>
    <string name="times_new_roman">Times New Roman</string>
    <string name="themes">Themes:</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="classic_mode">Classic Mode</string>
    <string name="default_mode">Default Mode</string>
    <string name="save_settings">Save Settings</string>
    <string name="reset_to_default">Reset to default</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_archive">ArchiveActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">The General Service Office (GSO) is an administrative unit within Camarines Norte State College that oversees and manages a variety of support functions, including facility management, maintenance, security, janitorial services, to ensure the efficient and effective operation of the organization\'s facilities and services.\n\nThis office serves as a pivotal function within our organization, responsible for various critical tasks and services that contribute to the smooth operation of our facilities and overall organization. Here are further details for each category:\n\n

        1. <b>Repair and Maintenance</b>\n
            \t• GSO oversees and manages all repair and maintenance tasks, ensuring that our facilities are well-maintained and functional. This includes:\n
            \t\t• Plumbing repairs and maintenance\n
            \t\t• Electrical system maintenance\n
            \t\t• Heating, ventilation, and air conditioning (HVAC) system upkeep\n
            \t\t• General repairs to infrastructure and equipment\n
            \t\t• Timely response and repair requests from students, employers, and stakeholders\n\n

        2. <b>Facility Scheduling</b>\n
            \t• GSO is responsible for coordinating the scheduling and use of key facilities on our campus. This entails:\n
            \t\t• Maintaining reservations for spaces such as the covered court, amphitheater, and student center, and other case facilities\n
            \t\t• Ensuring that facilities are available for various events, meetings, classes, and extracurricular activities\n
            \t\t• Optimizing facility usage to accommodate the diverse needs of our organization and other stakeholders\n\n

        3. <b>Security Services</b>\n
            \t• GSO provides comprehensive security services to maintain a safe and secure environment for our organization. This involves:\n
            \t\t• Implementing a regular roving inspection to concerns\n
            \t\t• Conducting regular security assessments and risk surveillance\n
            \t\t• Managing access control systems and surveillance\n
            \t\t• Responding to security incidents and emergencies promptly and effectively\n\n

        4. <b>Personnel Development</b>\n
            \t• GSO places a strong emphasis on enhancing the skills and knowledge of it\'s personnel. This includes:\n
            \t\t• Organizing internal seminars and training programs to import the proficiency of GSO team members\n
            \t\t•  Collaborating with external training partners to provide specialized training when necessary\n
            \t\t•  Encouraging ongoing professional development among staff\n\n

        5. <b>Agreement with External Providers</b>\n
            \t\t• Contractual agreements for additional security personnel\n
            \t\t• Coordination with external providers during special events or heightened security needs\n
            \t\t• Regular communication and alignment with external partners to ensure a unified security approach\n\n

        6. <b>Enhancing and Sustaining Technical Skills</b>\n
            \t\t• As part of the commitment to personnel development, GSO includes responder training in it\'s programs\n
            \t\t• Respondents training covers a wide range of technical skills, including the safety, first aid, medical response, and emergency procedures\n
            \t\t• This training is conducted in collaboration with the Bureau Fore of Protection (BFP) and is designed to enhance and sustain the technical skills for our employees\n\n

        7. <b>Budgeting and Planning</b>\n
            \t• To ensure the efficient allocation of resources, GSO follows a meticulous planning and budgeting process through Yearly Planing and Budgeting and using following a document called Project Procurement Management Plan (PPMP). This process includes:\n
            \t\t• Detailed budget allocation for repair, maintenance, security management, and  facility management\n
            \t\t• Monitoring and tracking of expenditures throughout the year\n
            \t\t• Adjusting budgets as needed to address unexpected challenges or opportunities\n\n
    </string>
    <string name="camarines_norte_state_college">
        Camarines Norte State College\n
        General Services Office
    </string>
    <string name="todo_">TODO</string>
    <string name="todo__">TODO</string>
    <string name="todo___">TODO</string>
    <string name="todo_1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO</string>
    <string name="todo6">TODO</string>
    <string name="todo7">TODO</string>
    <string name="todo8">TODO</string>
    <string name="gallery">Gallery</string>
    <string name="slider">slider\n</string>
</resources>