<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#870400"
    android:visibility="visible"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
    app:layout_constraintVertical_bias="1.0"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:minHeight="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/eyy">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="83dp"
                android:layout_height="82dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.048"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cnsc_logo___white_border" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:backgroundTintMode="multiply"
                android:gravity="center"
                android:shadowColor="#000000"
                android:shadowDx="6"
                android:shadowDy="6"
                android:shadowRadius="6"
                android:text="@string/camarines_norte_state_college"
                android:textAlignment="gravity"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#FFC107"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.509" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/_constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:minHeight="75dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <ImageButton
            android:id="@+id/returnHome_"
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:backgroundTint="#F1C900"
            android:contentDescription="@string/back"
            android:minWidth="75dp"
            android:onClick="returnHome"
            android:src="@drawable/baseline_home_24" />

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="6dp"
            android:background="#F1C900"
            android:gravity="center"
            android:text="@string/settings"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="6dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_constraintLayout">

        <LinearLayout
            android:id="@+id/settingsHolder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="6dp"
            tools:ignore="ExtraText">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/font_style"
                android:textColor="#000000" />

            <RadioGroup
                android:id="@+id/font_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/arial"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="500dp"
                    android:text="@string/arial"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/helvetica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/helvetica"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/times_new_roman"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/times_new_roman"
                    android:textColor="#000000" />

            </RadioGroup>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/themes"
                android:textColor="#000000" />

            <RadioGroup
                android:id="@+id/themes_mode"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/default_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_mode"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/classic_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/classic_mode"
                    android:textColor="#000000" />

                <RadioButton
                    android:id="@+id/dark_mode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode"
                    android:textColor="#000000" />
            </RadioGroup>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/saveSettings"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F1C900"
                    android:onClick="changeTheme"
                    android:text="@string/save_settings"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toStartOf="@+id/resetDefault"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/resetDefault"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F1C900"
                    android:text="@string/reset_to_default"
                    android:textColor="#000000"
                    app:layout_constraintBottom_toBottomOf="@+id/saveSettings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/saveSettings"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
